Started changes to make Python 3 compatible

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
-#Track everything except .pyc and figure files.
+#Track everything except .pyc, figure files and the .ignore directory
 *.pyc
+.idea/
